# TicTacToe

./: CMakeLists.txt  README.md  field.cpp  field.h  fieldmodel.cpp  fieldmodel.h  main.cpp  main.qml  qml.qrc  tictactoeai.cpp  tictactoeai.h
resources/sprites/: Tic-tac-toe.ai
themes/: qmldir  theme.qml
